<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_menu_btn_show_list"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/text_btn_show_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_menu_btn_add"
        android:enabled="true"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/text_btn_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_menu_btn_edit"
        android:enabled="true"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/text_btn_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_menu_btn_remove"
        android:enabled="true"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/text_btn_remove"
        app:showAsAction="ifRoom" />
</menu>